# survey_dashboard

./: .dockerignore  .env.example  .env.local.example  .gitignore  .pre-commit-config.yaml  Citation.cff  Dockerfile  LICENSE  README.md  app.py  clean_data.py  codemeta.json  docker-compose.yml  process_data.py  pyproject.toml  run_dev.sh  survey_dashboard.ipynb
.github/workflows/: ci.yml  release.yml
dashboard/: analysis.py  description.html  devel_plots.ipynb  main.py  plot_styles.py  plots.py  survey_dashboard.ipynb  text_display.py  unemploymemt.html
dashboard/data/: 20211130_HMCCommSurvey_clean.csv  HMC_community_survey2021_merged_all_replies.csv  barchart_allowed.txt  corr_chart_allowed.txt  download_data.py  filters.txt  filters_hub.txt  filters_methods.txt  hmc_survey_2021_data_cleaned.csv  questions.txt
dashboard/data/display_specifications/: filters.txt  filters_methods.txt  hcs_clean_dictionaries.py  hmc_colordicts.py  hmc_custom_layout.py  mulit_chart_allowed.txt
dashboard/data/helpers/: 01_hcs_clean_dictionaries.py  hcs_clean_dictionaries.py  hmc_colordicts.py
dashboard/hmc_layout/: footer_.html
docs/: LOCAL_TESTING.md  column_mapping.md  test-local.sh
docs/notebooks/: survey_dashboard.ipynb
docs/refactoring/: README.md  developer-migration-guide.md  dockerization.md  https-and-domains-explained.md  main-refactoring-overview.md  module-architecture.md  testing-validation.md
nginx/conf.d/: default.conf
nginx/vhost.d/: default
survey_dashboard/: Dockerfile.yml  __init__.py  analysis.py  app.py  config.py  data_processor.py  description.html  docker-compose.yml  layout_manager.py  main.py  plots.py  scripts.py  survey_dashboard.ipynb  text_display.py  visualizations.py  widgets.py
survey_dashboard/core/: __init__.py  charts.py  config.py  data.py
survey_dashboard/data/: download_data.py  generate_overview.py  hcs_clean_dictionaries.py  hmc_repos.json  hmc_survey_2021_data.csv
survey_dashboard/data/display_specifications/: hcs_clean_dictionaries.py  hmc_custom_layout.py
survey_dashboard/hmc_layout/: de_template.html  en_template.html  header_.html  hmc_colordicts.py  hmc_custom_layout.py  hmc_laylout.html
survey_dashboard/hmc_layout/static/en_files/: 623c39184ca97bb437e258ef(1).html  app.css  app.js  cables.min(1).js  code  lang.js  libs.core.min.js  libs.min.js  projectops(1).js  script.min.js  talkerapi.js
survey_dashboard/i18n/: __init__.py  text_display.py
survey_dashboard/ui/: __init__.py  callbacks.py  layout.py  widgets.py
